[project]
name = "sample-machine-learning"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3",
    "pytest>=9.0",
    "pytest-timeout>=2.4",
    "pytest-cov>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
timeout = 30
